--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="kamal pandey">
     <meta name="description" content="Bookstore demo to help in understanding of new features of HTML5 and CSS3">
     <link rel="stylesheet" type="text/css" href="styles/common.css">
+    <link rel ="stylesheet" type="text/css" href="styles/home.css">
 </head>
 <body>
 <header class="primaryNavigation">
@@ -33,6 +34,9 @@
             <li><a href="/gifts">GIFTS</a></li>
         </ul>
     </div>
+</section>
+<section class="bannerContainer">
+    <img src="assets/books-banner.jpg" alt="books banner" class="banner">
 </section>
 
 </body>
