about us section complete

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,33 @@
 <section class="bannerContainer">
     <img src="assets/books-banner.jpg" alt="books banner" class="banner">
 </section>
+<section class="aboutUsHomeContainer">
+    <article class="aboutUsContent">
+        <header>
+            <h1>Konfinity Book Store</h1>
+            <div class="underline"></div>
+        </header>
+        <div class="contentContainer">
+        <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et justo scelerisque, faucibus dui eu, molestie augue. Nunc sodales magna sit amet maximus faucibus. Sed malesuada sit amet orci ut posuere. In lectus mauris, molestie non sagittis at, mollis sit amet nibh. Phasellus fringilla luctus rutrum. Vestibulum facilisis mi turpis, malesuada ultrices felis posuere nec. Etiam commodo fermentum faucibus. Curabitur a ligula vel lorem rhoncus efficitur eu semper sapien. Curabitur vitae arcu ac tortor sollicitudin molestie id sed ante. Nulla ut scelerisque sapien. Vivamus ac maximus quam. Etiam interdum placerat sem et sodales. Maecenas faucibus nec ex non sodales. Aenean ullamcorper viverra neque.</p>
+        <p class="content">Lorem ipsum dolor sit amet nec. Curabitur vitae arcu ac tortor sollicitudin molestie id sed ante. Nulla ut scelerisque sapien. Vivamus ac maximus quam. Etiam interdum placerat sem et sodales. Maecenas faucibus nec ex non sodales. Aenean ullamcorper viverra neque.</p>
+        </div>
+            <aside class="sideContent">
+            <header>
+                <h3>What's New</h3>
+                <div class="underline-tertiary"></div>
+            </header>
+            <div class="whatNewContainer">
+                <ul class="whatsNewList">
+                    <li class="whatsNewListItem"><a href="#">New Book Launched</a> </li>
+                    <li class="whatsNewListItem"><a href="#">HTML5 book launched</a> </li>
+                    <li class="whatsNewListItem"><a href="#">CSS3 book free for 3 days</a> </li>
+                    <li class="whatsNewListItem"><a href="#">New subscription website launched</a> </li>
+                    <li class="whatsNewListItem"><a href="#">Now anybody could be author</a> </li>
+                </ul>
+            </div>
+        </aside>
 
+    </article>
+</section>
 </body>
 </html>
