home page layout complete

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link rel ="stylesheet" type="text/css" href="styles/home.css">
 </head>
 <body>
-<header class="primaryNavigation">
+<nav class="primaryNavigation">
     <div class="navigationContainer">
         <div class="logoContainer">
             <span class="logo">Konfinity</span>
@@ -21,9 +21,8 @@
         </ul>
     </div>
     </div>
-</header>
-<section>
-    <div class="secondaryHeaderContainer">
+</nav>
+    <nav class="secondaryHeaderContainer">
         <ul class="secondaryNavigation">
             <li><a href="#">HOME</a></li>
             <li><a href="/blog">BLOG</a></li>
@@ -33,8 +32,7 @@
             <li><a href="story">OUR STORY</a></li>
             <li><a href="/gifts">GIFTS</a></li>
         </ul>
-    </div>
-</section>
+    </nav>
 <section class="bannerContainer">
     <img src="assets/books-banner.jpg" alt="books banner" class="banner">
 </section>
@@ -63,8 +61,114 @@
                 </ul>
             </div>
         </aside>
-
     </article>
 </section>
+<div class="clear"></div>
+<section class="bestsellers">
+    <header>
+        <h1>Bestsellers@Konfinity Books</h1>
+        <div class="underline"></div>
+    </header>
+    <div class="bestsellersContainer">
+        <section class="categoryBestsellers">
+            <header>
+                <h3>Paperback Bestsellers</h3>
+                <div class="underline-tertiary"></div>
+            </header>
+            <div class="categoryBestsellerContainer">
+                <ul class="bestsellerList">
+                    <li class="bestsellerListItem">
+                        <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
+                        <p class="bestsellerName">Book title 1</p>
+                        <p class="bestsellerPrice">INR 2000</p>
+                        <input type="button" class="bestsellerBuyNow" value="Add to Cart">
+                    </li>
+                    <li class="bestsellerListItem">
+                        <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
+                        <p class="bestsellerName">Book title 1</p>
+                        <p class="bestsellerPrice">INR 2000</p>
+                        <input type="button" class="bestsellerBuyNow" value="Add to Cart">
+                    </li>
+                    <li class="bestsellerListItem">
+                        <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
+                        <p class="bestsellerName">Book title 1</p>
+                        <p class="bestsellerPrice">INR 2000</p>
+                        <input type="button" class="bestsellerBuyNow" value="Add to Cart">
+                    </li>
+                    <li class="bestsellerListItem">
+                        <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
+                        <p class="bestsellerName">Book title 1</p>
+                        <p class="bestsellerPrice">INR 2000</p>
+                        <input type="button" class="bestsellerBuyNow" value="Add to Cart">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="categoryBestsellers">
+            <header>
+                <h3>Digital Bestsellers</h3>
+                <div class="underline-tertiary"></div>
+            </header>
+            <div class="categoryBestsellerContainer">
+                <ul class="bestsellerList">
+                    <li class="bestsellerListItem">
+                        <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
+                        <p class="bestsellerName">Book title 1</p>
+                        <p class="bestsellerPrice">INR 2000</p>
+                        <input type="button" class="bestsellerBuyNow" value="Add to Cart">
+                    </li>
+                    <li class="bestsellerListItem">
+                        <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
+                        <p class="bestsellerName">Book title 1</p>
+                        <p class="bestsellerPrice">INR 2000</p>
+                        <input type="button" class="bestsellerBuyNow" value="Add to Cart">
+                    </li>
+                    <li class="bestsellerListItem">
+                        <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
+                        <p class="bestsellerName">Book title 1</p>
+                        <p class="bestsellerPrice">INR 2000</p>
+                        <input type="button" class="bestsellerBuyNow" value="Add to Cart">
+                    </li>
+                    <li class="bestsellerListItem">
+                        <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
+                        <p class="bestsellerName">Book title 1</p>
+                        <p class="bestsellerPrice">INR 2000</p>
+                        <input type="button" class="bestsellerAddToCart" value="Add to Cart">
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </div>
+</section>
+<footer class="websiteFooter">
+    <div class="footerContainer">
+        <div class="logoContainer">
+            <span class="logo">Konfinity</span>
+        </div>
+        <div class="addressContainer">
+            <p class="addressHead">Visit us at:</p>
+            <address>
+                1667 1st floor sushant lok <br>
+                block c, phase 1 Gurgaon, Haryana<br>
+                India
+            </address>
+        </div>
+        <div class="socialContainer">
+        <p class="socialHeader">
+            follow us at:
+        </p>
+            <div class="socialImageContainer">
+                <ul class="socialImageList">
+                    <li class="socialImageListItem">
+                        <img class="socialImage" src="assets/fb.jpg" alt="Fb Image">
+                        <img class="socialImage" src="assets/twitter.jpg" alt="twitter Image">
+                        <img class="socialImage" src="assets/insta.jpg" alt="insta Image">
+                        <img class="socialImage" src="assets/reddit.jpg" alt="Reddit Image">
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
