little javascript demo

--- a/client/index.html
+++ b/client/index.html
@@ -81,7 +81,7 @@
                         <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
                         <p class="bestsellerName">Book title 1</p>
                         <p class="bestsellerPrice">INR 2000</p>
-                        <input type="button" class="bestsellerBuyNow" value="Add to Cart">
+                        <input type="button" class="bestsellerBuyNow" value="Add to Cart" id="addToCart">
                     </li>
                     <li class="bestsellerListItem">
                         <img src="assets/bestseller.jpg" alt="bestseller image" class="bestsellerListImage">
@@ -170,5 +170,9 @@
         </div>
     </div>
 </footer>
+
+<!--application scripts -->
+<script src="scripts/app.js" type="application/javascript"></script>
+
 </body>
 </html>
