checkout form added

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
             <li><a href="/books">OUR BOOKS</a></li>
             <li><a href="/findus">FIND US</a></li>
             <li><a href="contactus">CONTACT US</a></li>
-            <li><a href="story">OUR STORY</a></li>
+            <li><a href="/checkout.html">Checkout</a></li>
             <li><a href="/gifts">GIFTS</a></li>
         </ul>
     </nav>
@@ -173,6 +173,5 @@
 
 <!--application scripts -->
 <script src="scripts/app.js" type="application/javascript"></script>
-
 </body>
 </html>
