--- a/client/checkout.html
+++ b/client/checkout.html
@@ -41,32 +41,32 @@
             <fieldset class="personalForm">
                 <legend>Personal Details</legend>
                 <label for = "firstname" class="label">First Name</label>
-                <input type="text" class="textInput" name="firstname" id ="firstname">
+                <input type="text" class="textInput" name="firstname" id ="firstname" required maxlength="50">
                 <div class="clear"></div>
                 <label for="lastname" class="label">Last Name</label>
-                <input type="text" class="textInput" name="lastname" id="lastname">
+                <input type="text" class="textInput" name="lastname" id="lastname" required maxlength="50">
                 <div class="clear"></div>
                 <label for = "email" class="label">Email</label>
-                <input type="text" class="textInput" name="email" id ="email">
+                <input type="text" class="textInput" name="email" id ="email" required>
                 <div class="clear"></div>
                 <label for = "phone" class="label">Phone Number</label>
-                <input type="tel" class="textInput" name="phone" id ="phone">
+                <input type="tel" class="textInput" name="phone" id ="phone" required minlength="10" maxlength="12">
                 <div class="clear"></div>
 
                 <label for = "address" class="label">Address</label>
-                <textarea type="text" class="textInput" name="address" id ="address" rows="4"></textarea>
+                <textarea type="text" class="textInput" name="address" id ="address" rows="4" required maxlength="200"></textarea>
                 <div class="clear"></div>
 
                 <label for = "zip" class="label">Zip Code</label>
-                <input type="number" class="textInput" name="zip" id ="zip" >
+                <input type="number" class="textInput" name="zip" id ="zip" required maxlength="6">
                 <div class="clear"></div>
 
                 <label for = "city" class="label">City</label>
-                <input type="text" class="textInput" name="city" id ="city" >
+                <input type="text" class="textInput" name="city" id ="city" required pattern="[A-Za-z]{3}" >
                 <div class="clear"></div>
 
                 <label for = "remark" class="label">Remark</label>
-                <textarea type="text" class="textInput" name="remark" id ="remark" rows="4"></textarea>
+                <textarea type="text" class="textInput" name="remark" id ="remark" rows="4" maxlength="200"></textarea>
                 <div class="clear"></div>
             </fieldset>
             <fieldset>
